2006-12-12
* Removed rails from vendor directory.

2006-11-27
* For purposes of counting, the HAVING statement is now extracted from the :group option as a convenience for users that are hacking around the lack of a AR#find :having option. Thanks to Gavin Joyce for pointing out this usage of :group. More info here: http://www.mail-archive.com/rails-core@lists.rubyonrails.org/msg01876.html.
* For purposes of counting, the :select option is now ignored in favor of table_name.id. Thanks to Aron Atkins for reporting a bug that led to this fix.

2006-10-17
* Count query no longer uses :limit. This option doesn't have the same effect on count as it does on find. The :limit is applied to the count after the query is performed, if necessary.
* Count query no longer uses :group. Grouping during a count doesn't get any different count than not grouping.
* Count query no longer uses :order for the same reasons that :group is no longer used.

2006-09-26
* Change log is now in reverse chronological order
* Count query now respects :group and :order. Previous changes removing this functionality are no longer applicable.

2006-09-19
* Added :count option. Using this will cause the plugin to skip the automatic database count query (which can sometimes be slow).
* The :limit option no longer affects whether the count query will run.
* Fixed a bug reported by Lisa, where the count query was choking on grouped results. The count query now ignores :group.

2006-09-14
* Scoping now works correctly, even when enumeration is done outside the #with_scope code block.
* Added the #empty? method.
* Added #first_item and #last_item, which return the index of the first and last items on the current page. Thanks, Ilya!

2006-09-10
* Now works correctly :with_scope, nested :with_scope, and :include.
* Now correctly counts when querying on through associations.
* Rewrote paginating_find_test so that it uses real AR::Base models, rather than mocks.