@@ -1,3 +1,7 @@
+2006-12-21
+* Applied another fix to counting with :group option. Special thanks to Ben Weiner.
+* Placed tests for grouping in a separate class.
+
 2006-12-12
 * Removed rails from vendor directory.
 
